CompilerDesignIIT_tp--main/cs21b062lab10/y.output
Terminals unused in grammar

    CONTINUE


State 13 conflicts: 10 shift/reduce
State 33 conflicts: 10 shift/reduce
State 99 conflicts: 10 shift/reduce
State 105 conflicts: 10 shift/reduce
State 111 conflicts: 10 shift/reduce


Grammar

    0 $accept: StatementList $end

    1 StatementList: Statement SEMICOLON StatementList
    2              | IfStatement StatementList

    3 $@1: ε

    4 $@2: ε

    5 $@3: ε

    6 StatementList: WHILE LPAREN ComRelExp RPAREN LCURL begin dummyLabels $@1 StatementList RCURL $@2 $@3 StatementList
    7              | SwitchStatement
    8              | ε

    9 $@4: ε

   10 $@5: ε

   11 SwitchStatement: SWITCH LPAREN CaseVal $@4 RPAREN LCURL CaseStatements RCURL $@5 StatementList

   12 $@6: ε

   13 $@7: ε

   14 CaseStatements: CASE CaseVal COLON dummyLabels $@6 StatementList BreakStmt $@7 CaseStatements
   15               | DEFAULT COLON StatementList
   16               | ε

   17 BreakStmt: BREAK SEMICOLON

   18 $@8: ε

   19 $@9: ε

   20 IfStatement: IF LPAREN ComRelExp RPAREN dummyLabels LCURL $@8 StatementList RCURL $@9 ElseStmt StatementList

   21 ElseStmt: ELSE LCURL StatementList RCURL
   22         | ELSE IfStatement
   23         | ε

   24 dummyLabels: ε

   25 begin: ε

   26 Statement: IDENTIFIER EQ Statement
   27          | Term

   28 ComRelExp: ComRelExp AND Relexp
   29          | ComRelExp OR Relexp
   30          | Relexp

   31 Relexp: Term LT Term
   32       | Term LTE Term
   33       | Term GT Term
   34       | Term GTE Term
   35       | Term EQ EQ Term
   36       | Term NOT EQ Term
   37       | LPAREN Relexp RPAREN
   38       | NOT Relexp
   39       | ε

   40 Term: Term ADD Factor
   41     | Term SUB Factor
   42     | Factor

   43 Factor: Factor MUL SIGNVal
   44       | Factor DIV SIGNVal
   45       | SIGNVal

   46 SIGNVal: ADD Val
   47        | SUB Val
   48        | Val

   49 CaseVal: IDENTIFIER
   50        | NUMBER

   51 Val: IDENTIFIER
   52    | NUMBER
   53    | PADD IDENTIFIER
   54    | PSUB IDENTIFIER
   55    | IDENTIFIER PADD
   56    | IDENTIFIER PSUB
   57    | LPAREN Term RPAREN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IF (258) 20
    ELSE (259) 21 22
    ADD (260) 40 46
    SUB (261) 41 47
    MUL (262) 43
    DIV (263) 44
    EQ (264) 26 35 36
    LT (265) 31
    LTE (266) 32
    GT (267) 33
    GTE (268) 34
    NOT (269) 36 38
    AND (270) 28
    OR (271) 29
    PADD (272) 53 55
    PSUB (273) 54 56
    LPAREN (274) 6 11 20 37 57
    RPAREN (275) 6 11 20 37 57
    LCURL (276) 6 11 20 21
    RCURL (277) 6 11 20 21
    SEMICOLON (278) 1 17
    WHILE (279) 6
    COLON (280) 14 15
    SWITCH (281) 11
    BREAK (282) 17
    CONTINUE (283)
    DEFAULT (284) 15
    CASE (285) 14
    NUMBER <dval> (286) 50 52
    IDENTIFIER <addr> (287) 26 49 51 53 54 55 56


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    StatementList <addr> (34)
        on left: 1 2 6 7 8
        on right: 0 1 2 6 11 14 15 20 21
    $@1 (35)
        on left: 3
        on right: 6
    $@2 (36)
        on left: 4
        on right: 6
    $@3 (37)
        on left: 5
        on right: 6
    SwitchStatement <addr> (38)
        on left: 11
        on right: 7
    $@4 (39)
        on left: 9
        on right: 11
    $@5 (40)
        on left: 10
        on right: 11
    CaseStatements <addr> (41)
        on left: 14 15 16
        on right: 11 14
    $@6 (42)
        on left: 12
        on right: 14
    $@7 (43)
        on left: 13
        on right: 14
    BreakStmt <addr> (44)
        on left: 17
        on right: 14
    IfStatement <addr> (45)
        on left: 20
        on right: 2 22
    $@8 (46)
        on left: 18
        on right: 20
    $@9 (47)
        on left: 19
        on right: 20
    ElseStmt <addr> (48)
        on left: 21 22 23
        on right: 20
    dummyLabels <lab> (49)
        on left: 24
        on right: 6 14 20
    begin <lab> (50)
        on left: 25
        on right: 6
    Statement <addr> (51)
        on left: 26 27
        on right: 1 26
    ComRelExp <addr> (52)
        on left: 28 29 30
        on right: 6 20 28 29
    Relexp <addr> (53)
        on left: 31 32 33 34 35 36 37 38 39
        on right: 28 29 30 37 38
    Term <addr> (54)
        on left: 40 41 42
        on right: 27 31 32 33 34 35 36 40 41 57
    Factor <addr> (55)
        on left: 43 44 45
        on right: 40 41 42 43 44
    SIGNVal <addr> (56)
        on left: 46 47 48
        on right: 43 44 45
    CaseVal <addCase> (57)
        on left: 49 50
        on right: 11 14
    Val <addr> (58)
        on left: 51 52 53 54 55 56 57
        on right: 46 47 48


State 0

    0 $accept: • StatementList $end

    IF          shift, and go to state 1
    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    WHILE       shift, and go to state 7
    SWITCH      shift, and go to state 8
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    $default  reduce using rule 8 (StatementList)

    StatementList    go to state 11
    SwitchStatement  go to state 12
    IfStatement      go to state 13
    Statement        go to state 14
    Term             go to state 15
    Factor           go to state 16
    SIGNVal          go to state 17
    Val              go to state 18


State 1

   20 IfStatement: IF • LPAREN ComRelExp RPAREN dummyLabels LCURL $@8 StatementList RCURL $@9 ElseStmt StatementList

    LPAREN  shift, and go to state 19


State 2

   46 SIGNVal: ADD • Val

    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    Val  go to state 21


State 3

   47 SIGNVal: SUB • Val

    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    Val  go to state 22


State 4

   53 Val: PADD • IDENTIFIER

    IDENTIFIER  shift, and go to state 23


State 5

   54 Val: PSUB • IDENTIFIER

    IDENTIFIER  shift, and go to state 24


State 6

   57 Val: LPAREN • Term RPAREN

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    Term     go to state 25
    Factor   go to state 16
    SIGNVal  go to state 17
    Val      go to state 18


State 7

    6 StatementList: WHILE • LPAREN ComRelExp RPAREN LCURL begin dummyLabels $@1 StatementList RCURL $@2 $@3 StatementList

    LPAREN  shift, and go to state 26


State 8

   11 SwitchStatement: SWITCH • LPAREN CaseVal $@4 RPAREN LCURL CaseStatements RCURL $@5 StatementList

    LPAREN  shift, and go to state 27


State 9

   52 Val: NUMBER •

    $default  reduce using rule 52 (Val)


State 10

   26 Statement: IDENTIFIER • EQ Statement
   51 Val: IDENTIFIER •
   55    | IDENTIFIER • PADD
   56    | IDENTIFIER • PSUB

    EQ    shift, and go to state 28
    PADD  shift, and go to state 29
    PSUB  shift, and go to state 30

    $default  reduce using rule 51 (Val)


State 11

    0 $accept: StatementList • $end

    $end  shift, and go to state 31


State 12

    7 StatementList: SwitchStatement •

    $default  reduce using rule 7 (StatementList)


State 13

    2 StatementList: IfStatement • StatementList

    IF          shift, and go to state 1
    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    WHILE       shift, and go to state 7
    SWITCH      shift, and go to state 8
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    IF          [reduce using rule 8 (StatementList)]
    ADD         [reduce using rule 8 (StatementList)]
    SUB         [reduce using rule 8 (StatementList)]
    PADD        [reduce using rule 8 (StatementList)]
    PSUB        [reduce using rule 8 (StatementList)]
    LPAREN      [reduce using rule 8 (StatementList)]
    WHILE       [reduce using rule 8 (StatementList)]
    SWITCH      [reduce using rule 8 (StatementList)]
    NUMBER      [reduce using rule 8 (StatementList)]
    IDENTIFIER  [reduce using rule 8 (StatementList)]
    $default    reduce using rule 8 (StatementList)

    StatementList    go to state 32
    SwitchStatement  go to state 12
    IfStatement      go to state 13
    Statement        go to state 14
    Term             go to state 15
    Factor           go to state 16
    SIGNVal          go to state 17
    Val              go to state 18


State 14

    1 StatementList: Statement • SEMICOLON StatementList

    SEMICOLON  shift, and go to state 33


State 15

   27 Statement: Term •
   40 Term: Term • ADD Factor
   41     | Term • SUB Factor

    ADD  shift, and go to state 34
    SUB  shift, and go to state 35

    $default  reduce using rule 27 (Statement)


State 16

   42 Term: Factor •
   43 Factor: Factor • MUL SIGNVal
   44       | Factor • DIV SIGNVal

    MUL  shift, and go to state 36
    DIV  shift, and go to state 37

    $default  reduce using rule 42 (Term)


State 17

   45 Factor: SIGNVal •

    $default  reduce using rule 45 (Factor)


State 18

   48 SIGNVal: Val •

    $default  reduce using rule 48 (SIGNVal)


State 19

   20 IfStatement: IF LPAREN • ComRelExp RPAREN dummyLabels LCURL $@8 StatementList RCURL $@9 ElseStmt StatementList

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    NOT         shift, and go to state 38
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 39
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    $default  reduce using rule 39 (Relexp)

    ComRelExp  go to state 40
    Relexp     go to state 41
    Term       go to state 42
    Factor     go to state 16
    SIGNVal    go to state 17
    Val        go to state 18


State 20

   51 Val: IDENTIFIER •
   55    | IDENTIFIER • PADD
   56    | IDENTIFIER • PSUB

    PADD  shift, and go to state 29
    PSUB  shift, and go to state 30

    $default  reduce using rule 51 (Val)


State 21

   46 SIGNVal: ADD Val •

    $default  reduce using rule 46 (SIGNVal)


State 22

   47 SIGNVal: SUB Val •

    $default  reduce using rule 47 (SIGNVal)


State 23

   53 Val: PADD IDENTIFIER •

    $default  reduce using rule 53 (Val)


State 24

   54 Val: PSUB IDENTIFIER •

    $default  reduce using rule 54 (Val)


State 25

   40 Term: Term • ADD Factor
   41     | Term • SUB Factor
   57 Val: LPAREN Term • RPAREN

    ADD     shift, and go to state 34
    SUB     shift, and go to state 35
    RPAREN  shift, and go to state 43


State 26

    6 StatementList: WHILE LPAREN • ComRelExp RPAREN LCURL begin dummyLabels $@1 StatementList RCURL $@2 $@3 StatementList

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    NOT         shift, and go to state 38
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 39
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    $default  reduce using rule 39 (Relexp)

    ComRelExp  go to state 44
    Relexp     go to state 41
    Term       go to state 42
    Factor     go to state 16
    SIGNVal    go to state 17
    Val        go to state 18


State 27

   11 SwitchStatement: SWITCH LPAREN • CaseVal $@4 RPAREN LCURL CaseStatements RCURL $@5 StatementList

    NUMBER      shift, and go to state 45
    IDENTIFIER  shift, and go to state 46

    CaseVal  go to state 47


State 28

   26 Statement: IDENTIFIER EQ • Statement

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    Statement  go to state 48
    Term       go to state 15
    Factor     go to state 16
    SIGNVal    go to state 17
    Val        go to state 18


State 29

   55 Val: IDENTIFIER PADD •

    $default  reduce using rule 55 (Val)


State 30

   56 Val: IDENTIFIER PSUB •

    $default  reduce using rule 56 (Val)


State 31

    0 $accept: StatementList $end •

    $default  accept


State 32

    2 StatementList: IfStatement StatementList •

    $default  reduce using rule 2 (StatementList)


State 33

    1 StatementList: Statement SEMICOLON • StatementList

    IF          shift, and go to state 1
    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    WHILE       shift, and go to state 7
    SWITCH      shift, and go to state 8
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    IF          [reduce using rule 8 (StatementList)]
    ADD         [reduce using rule 8 (StatementList)]
    SUB         [reduce using rule 8 (StatementList)]
    PADD        [reduce using rule 8 (StatementList)]
    PSUB        [reduce using rule 8 (StatementList)]
    LPAREN      [reduce using rule 8 (StatementList)]
    WHILE       [reduce using rule 8 (StatementList)]
    SWITCH      [reduce using rule 8 (StatementList)]
    NUMBER      [reduce using rule 8 (StatementList)]
    IDENTIFIER  [reduce using rule 8 (StatementList)]
    $default    reduce using rule 8 (StatementList)

    StatementList    go to state 49
    SwitchStatement  go to state 12
    IfStatement      go to state 13
    Statement        go to state 14
    Term             go to state 15
    Factor           go to state 16
    SIGNVal          go to state 17
    Val              go to state 18


State 34

   40 Term: Term ADD • Factor

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    Factor   go to state 50
    SIGNVal  go to state 17
    Val      go to state 18


State 35

   41 Term: Term SUB • Factor

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    Factor   go to state 51
    SIGNVal  go to state 17
    Val      go to state 18


State 36

   43 Factor: Factor MUL • SIGNVal

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    SIGNVal  go to state 52
    Val      go to state 18


State 37

   44 Factor: Factor DIV • SIGNVal

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    SIGNVal  go to state 53
    Val      go to state 18


State 38

   38 Relexp: NOT • Relexp

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    NOT         shift, and go to state 38
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 39
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    $default  reduce using rule 39 (Relexp)

    Relexp   go to state 54
    Term     go to state 42
    Factor   go to state 16
    SIGNVal  go to state 17
    Val      go to state 18


State 39

   37 Relexp: LPAREN • Relexp RPAREN
   57 Val: LPAREN • Term RPAREN

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    NOT         shift, and go to state 38
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 39
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    $default  reduce using rule 39 (Relexp)

    Relexp   go to state 55
    Term     go to state 56
    Factor   go to state 16
    SIGNVal  go to state 17
    Val      go to state 18


State 40

   20 IfStatement: IF LPAREN ComRelExp • RPAREN dummyLabels LCURL $@8 StatementList RCURL $@9 ElseStmt StatementList
   28 ComRelExp: ComRelExp • AND Relexp
   29          | ComRelExp • OR Relexp

    AND     shift, and go to state 57
    OR      shift, and go to state 58
    RPAREN  shift, and go to state 59


State 41

   30 ComRelExp: Relexp •

    $default  reduce using rule 30 (ComRelExp)


State 42

   31 Relexp: Term • LT Term
   32       | Term • LTE Term
   33       | Term • GT Term
   34       | Term • GTE Term
   35       | Term • EQ EQ Term
   36       | Term • NOT EQ Term
   40 Term: Term • ADD Factor
   41     | Term • SUB Factor

    ADD  shift, and go to state 34
    SUB  shift, and go to state 35
    EQ   shift, and go to state 60
    LT   shift, and go to state 61
    LTE  shift, and go to state 62
    GT   shift, and go to state 63
    GTE  shift, and go to state 64
    NOT  shift, and go to state 65


State 43

   57 Val: LPAREN Term RPAREN •

    $default  reduce using rule 57 (Val)


State 44

    6 StatementList: WHILE LPAREN ComRelExp • RPAREN LCURL begin dummyLabels $@1 StatementList RCURL $@2 $@3 StatementList
   28 ComRelExp: ComRelExp • AND Relexp
   29          | ComRelExp • OR Relexp

    AND     shift, and go to state 57
    OR      shift, and go to state 58
    RPAREN  shift, and go to state 66


State 45

   50 CaseVal: NUMBER •

    $default  reduce using rule 50 (CaseVal)


State 46

   49 CaseVal: IDENTIFIER •

    $default  reduce using rule 49 (CaseVal)


State 47

   11 SwitchStatement: SWITCH LPAREN CaseVal • $@4 RPAREN LCURL CaseStatements RCURL $@5 StatementList

    $default  reduce using rule 9 ($@4)

    $@4  go to state 67


State 48

   26 Statement: IDENTIFIER EQ Statement •

    $default  reduce using rule 26 (Statement)


State 49

    1 StatementList: Statement SEMICOLON StatementList •

    $default  reduce using rule 1 (StatementList)


State 50

   40 Term: Term ADD Factor •
   43 Factor: Factor • MUL SIGNVal
   44       | Factor • DIV SIGNVal

    MUL  shift, and go to state 36
    DIV  shift, and go to state 37

    $default  reduce using rule 40 (Term)


State 51

   41 Term: Term SUB Factor •
   43 Factor: Factor • MUL SIGNVal
   44       | Factor • DIV SIGNVal

    MUL  shift, and go to state 36
    DIV  shift, and go to state 37

    $default  reduce using rule 41 (Term)


State 52

   43 Factor: Factor MUL SIGNVal •

    $default  reduce using rule 43 (Factor)


State 53

   44 Factor: Factor DIV SIGNVal •

    $default  reduce using rule 44 (Factor)


State 54

   38 Relexp: NOT Relexp •

    $default  reduce using rule 38 (Relexp)


State 55

   37 Relexp: LPAREN Relexp • RPAREN

    RPAREN  shift, and go to state 68


State 56

   31 Relexp: Term • LT Term
   32       | Term • LTE Term
   33       | Term • GT Term
   34       | Term • GTE Term
   35       | Term • EQ EQ Term
   36       | Term • NOT EQ Term
   40 Term: Term • ADD Factor
   41     | Term • SUB Factor
   57 Val: LPAREN Term • RPAREN

    ADD     shift, and go to state 34
    SUB     shift, and go to state 35
    EQ      shift, and go to state 60
    LT      shift, and go to state 61
    LTE     shift, and go to state 62
    GT      shift, and go to state 63
    GTE     shift, and go to state 64
    NOT     shift, and go to state 65
    RPAREN  shift, and go to state 43


State 57

   28 ComRelExp: ComRelExp AND • Relexp

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    NOT         shift, and go to state 38
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 39
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    $default  reduce using rule 39 (Relexp)

    Relexp   go to state 69
    Term     go to state 42
    Factor   go to state 16
    SIGNVal  go to state 17
    Val      go to state 18


State 58

   29 ComRelExp: ComRelExp OR • Relexp

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    NOT         shift, and go to state 38
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 39
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    $default  reduce using rule 39 (Relexp)

    Relexp   go to state 70
    Term     go to state 42
    Factor   go to state 16
    SIGNVal  go to state 17
    Val      go to state 18


State 59

   20 IfStatement: IF LPAREN ComRelExp RPAREN • dummyLabels LCURL $@8 StatementList RCURL $@9 ElseStmt StatementList

    $default  reduce using rule 24 (dummyLabels)

    dummyLabels  go to state 71


State 60

   35 Relexp: Term EQ • EQ Term

    EQ  shift, and go to state 72


State 61

   31 Relexp: Term LT • Term

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    Term     go to state 73
    Factor   go to state 16
    SIGNVal  go to state 17
    Val      go to state 18


State 62

   32 Relexp: Term LTE • Term

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    Term     go to state 74
    Factor   go to state 16
    SIGNVal  go to state 17
    Val      go to state 18


State 63

   33 Relexp: Term GT • Term

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    Term     go to state 75
    Factor   go to state 16
    SIGNVal  go to state 17
    Val      go to state 18


State 64

   34 Relexp: Term GTE • Term

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    Term     go to state 76
    Factor   go to state 16
    SIGNVal  go to state 17
    Val      go to state 18


State 65

   36 Relexp: Term NOT • EQ Term

    EQ  shift, and go to state 77


State 66

    6 StatementList: WHILE LPAREN ComRelExp RPAREN • LCURL begin dummyLabels $@1 StatementList RCURL $@2 $@3 StatementList

    LCURL  shift, and go to state 78


State 67

   11 SwitchStatement: SWITCH LPAREN CaseVal $@4 • RPAREN LCURL CaseStatements RCURL $@5 StatementList

    RPAREN  shift, and go to state 79


State 68

   37 Relexp: LPAREN Relexp RPAREN •

    $default  reduce using rule 37 (Relexp)


State 69

   28 ComRelExp: ComRelExp AND Relexp •

    $default  reduce using rule 28 (ComRelExp)


State 70

   29 ComRelExp: ComRelExp OR Relexp •

    $default  reduce using rule 29 (ComRelExp)


State 71

   20 IfStatement: IF LPAREN ComRelExp RPAREN dummyLabels • LCURL $@8 StatementList RCURL $@9 ElseStmt StatementList

    LCURL  shift, and go to state 80


State 72

   35 Relexp: Term EQ EQ • Term

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    Term     go to state 81
    Factor   go to state 16
    SIGNVal  go to state 17
    Val      go to state 18


State 73

   31 Relexp: Term LT Term •
   40 Term: Term • ADD Factor
   41     | Term • SUB Factor

    ADD  shift, and go to state 34
    SUB  shift, and go to state 35

    $default  reduce using rule 31 (Relexp)


State 74

   32 Relexp: Term LTE Term •
   40 Term: Term • ADD Factor
   41     | Term • SUB Factor

    ADD  shift, and go to state 34
    SUB  shift, and go to state 35

    $default  reduce using rule 32 (Relexp)


State 75

   33 Relexp: Term GT Term •
   40 Term: Term • ADD Factor
   41     | Term • SUB Factor

    ADD  shift, and go to state 34
    SUB  shift, and go to state 35

    $default  reduce using rule 33 (Relexp)


State 76

   34 Relexp: Term GTE Term •
   40 Term: Term • ADD Factor
   41     | Term • SUB Factor

    ADD  shift, and go to state 34
    SUB  shift, and go to state 35

    $default  reduce using rule 34 (Relexp)


State 77

   36 Relexp: Term NOT EQ • Term

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 20

    Term     go to state 82
    Factor   go to state 16
    SIGNVal  go to state 17
    Val      go to state 18


State 78

    6 StatementList: WHILE LPAREN ComRelExp RPAREN LCURL • begin dummyLabels $@1 StatementList RCURL $@2 $@3 StatementList

    $default  reduce using rule 25 (begin)

    begin  go to state 83


State 79

   11 SwitchStatement: SWITCH LPAREN CaseVal $@4 RPAREN • LCURL CaseStatements RCURL $@5 StatementList

    LCURL  shift, and go to state 84


State 80

   20 IfStatement: IF LPAREN ComRelExp RPAREN dummyLabels LCURL • $@8 StatementList RCURL $@9 ElseStmt StatementList

    $default  reduce using rule 18 ($@8)

    $@8  go to state 85


State 81

   35 Relexp: Term EQ EQ Term •
   40 Term: Term • ADD Factor
   41     | Term • SUB Factor

    ADD  shift, and go to state 34
    SUB  shift, and go to state 35

    $default  reduce using rule 35 (Relexp)


State 82

   36 Relexp: Term NOT EQ Term •
   40 Term: Term • ADD Factor
   41     | Term • SUB Factor

    ADD  shift, and go to state 34
    SUB  shift, and go to state 35

    $default  reduce using rule 36 (Relexp)


State 83

    6 StatementList: WHILE LPAREN ComRelExp RPAREN LCURL begin • dummyLabels $@1 StatementList RCURL $@2 $@3 StatementList

    $default  reduce using rule 24 (dummyLabels)

    dummyLabels  go to state 86


State 84

   11 SwitchStatement: SWITCH LPAREN CaseVal $@4 RPAREN LCURL • CaseStatements RCURL $@5 StatementList

    DEFAULT  shift, and go to state 87
    CASE     shift, and go to state 88

    $default  reduce using rule 16 (CaseStatements)

    CaseStatements  go to state 89


State 85

   20 IfStatement: IF LPAREN ComRelExp RPAREN dummyLabels LCURL $@8 • StatementList RCURL $@9 ElseStmt StatementList

    IF          shift, and go to state 1
    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    WHILE       shift, and go to state 7
    SWITCH      shift, and go to state 8
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    $default  reduce using rule 8 (StatementList)

    StatementList    go to state 90
    SwitchStatement  go to state 12
    IfStatement      go to state 13
    Statement        go to state 14
    Term             go to state 15
    Factor           go to state 16
    SIGNVal          go to state 17
    Val              go to state 18


State 86

    6 StatementList: WHILE LPAREN ComRelExp RPAREN LCURL begin dummyLabels • $@1 StatementList RCURL $@2 $@3 StatementList

    $default  reduce using rule 3 ($@1)

    $@1  go to state 91


State 87

   15 CaseStatements: DEFAULT • COLON StatementList

    COLON  shift, and go to state 92


State 88

   14 CaseStatements: CASE • CaseVal COLON dummyLabels $@6 StatementList BreakStmt $@7 CaseStatements

    NUMBER      shift, and go to state 45
    IDENTIFIER  shift, and go to state 46

    CaseVal  go to state 93


State 89

   11 SwitchStatement: SWITCH LPAREN CaseVal $@4 RPAREN LCURL CaseStatements • RCURL $@5 StatementList

    RCURL  shift, and go to state 94


State 90

   20 IfStatement: IF LPAREN ComRelExp RPAREN dummyLabels LCURL $@8 StatementList • RCURL $@9 ElseStmt StatementList

    RCURL  shift, and go to state 95


State 91

    6 StatementList: WHILE LPAREN ComRelExp RPAREN LCURL begin dummyLabels $@1 • StatementList RCURL $@2 $@3 StatementList

    IF          shift, and go to state 1
    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    WHILE       shift, and go to state 7
    SWITCH      shift, and go to state 8
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    $default  reduce using rule 8 (StatementList)

    StatementList    go to state 96
    SwitchStatement  go to state 12
    IfStatement      go to state 13
    Statement        go to state 14
    Term             go to state 15
    Factor           go to state 16
    SIGNVal          go to state 17
    Val              go to state 18


State 92

   15 CaseStatements: DEFAULT COLON • StatementList

    IF          shift, and go to state 1
    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    WHILE       shift, and go to state 7
    SWITCH      shift, and go to state 8
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 10

    $default  reduce using rule 8 (StatementList)

    StatementList    go to state 97
    SwitchStatement  go to state 12
    IfStatement      go to state 13
    Statement        go to state 14
    Term             go to state 15
    Factor           go to state 16
    SIGNVal          go to state 17
    Val              go to state 18


State 93

   14 CaseStatements: CASE CaseVal • COLON dummyLabels $@6 StatementList BreakStmt $@7 CaseStatements

    COLON  shift, and go to state 98


State 94

   11 SwitchStatement: SWITCH LPAREN CaseVal $@4 RPAREN LCURL CaseStatements RCURL • $@5 StatementList

    $default  reduce using rule 10 ($@5)

    $@5  go to state 99


State 95

   20 IfStatement: IF LPAREN ComRelExp RPAREN dummyLabels LCURL $@8 StatementList RCURL • $@9 ElseStmt StatementList

    $default  reduce using rule 19 ($@9)

    $@9  go to state 100


State 96

    6 StatementList: WHILE LPAREN ComRelExp RPAREN LCURL begin dummyLabels $@1 StatementList • RCURL $@2 $@3 StatementList

    RCURL  shift, and go to state 101


State 97

   15 CaseStatements: DEFAULT COLON StatementList •

    $default  reduce using rule 15 (CaseStatements)


State 98

   14 CaseStatements: CASE CaseVal COLON • dummyLabels $@6 StatementList BreakStmt $@7 CaseStatements

    $default  reduce using rule 24 (dummyLabels)

    dummyLabels  go to state 102


State 99

   11 SwitchStatement: SWITCH LPAREN CaseVal $@4 RPAREN LCURL CaseStatements RCURL $@5 • StatementList

    IF          shift, and go to state 1
    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    WHILE       shift, and go to state 7
    SWITCH      shift, and go to state 8
    NUMBER      shift, and go to state 9
    IDENTIFIER  shift, and go to state 10
